tests/semantic/comp_clauses/comp_clauses.err
Error: Non-symbolic use for symbolic functor in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--^----------------------------------------------------
Error: Non-symbolic first argument for functor in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
------^------------------------------------------------
Error: Unable to deduce type for variable x in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
------^------------------------------------------------
Error: Non-symbolic second argument for functor in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--------^----------------------------------------------
Error: Unable to deduce type for variable x in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--------^----------------------------------------------
Error: Unable to deduce type for variable x in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
-----------------^-------------------------------------
6 errors generated, evaluation aborted
