tests/semantic/comp_clauses/comp_clauses.dl

.comp X {
	.decl p(x:symbol)
.output p()
    p(cat(x,x)) :- p(x).            // this one should not cause an issue
}

.init x = X

.decl q(x:number)
.output q()
q(cat(x,x)) :- q(x).                // this one should

